<resources>
    <string name="app_name">Covid19 Moniter App</string>
    <string name="title_current_country">Current</string>
    <string name="title_all_countries">All Countries</string>
    <string name="title_settings">Settings</string>

    <string name="search_text">Search</string>
    <string name="active_plain_text">Active:</string>
    <string name="confirmed_plain_text">Confirmed:</string>
    <string name="recovered_plain_text">Recovered:</string>
    <string name="deaths_plain_text">Deaths:</string>
    <string name="new_cases_plain_text">New Cases:</string>
    <string name="new_recoveries_plain_text">New Recoveries:</string>
    <string name="new_deaths_plain_text">New Deaths:</string>
    <string name="infection_plain_text">Infection:</string>
    <string name="recovery_plain_text">Recovery:</string>
    <string name="history_plain_text">History</string>
    <string name="recent_plain_text">Recent</string>
    <string name="ranking_plain_text">Ranking:</string>

    <string name="out_of_format">%d out of %d</string>
    <string name="country_flag_url" translatable="false">https://www.countryflags.io/%s/flat/64.png</string>

    <string name="current_conditions">Current Conditions</string>
    <string name="temp_unit_C">C</string>
    <string name="weather_image_content_description">Weather Image</string>
    <string name="back_button">Back Button</string>
    <string name="drop_of_water_content_description">Drop of water</string>
    <string name="hourly_forecast_temp_unit_C">°C</string>
    <string name="hourly_forecast_temp_unit_F">°F</string>
    <string name="precipitation_plain_text">Precipitation</string>
    <string name="favourites_plain_text">FAVOURITES</string>
    <string name="recent_upper_plain_text">RECENT</string>
    <string name="edit_plain_text">Edit</string>
    <string name="clear_all_plain_text">Clear All</string>
    <string name="find_location_plain_text">Find Location</string>
    <string name="enable_location_services_plain_text">Enable Location Services</string>
    <string name="you_haven_t_added_any_locations_yet_plain_text">You haven\'t added any locations yet.</string>
    <string name="it_looks_like_your_recent_history_is_empty_plain_text">It looks like your recent history is empty.</string>
    <string name="current_plain_text">CURRENT</string>
    <string name="locations_plain_text">Locations</string>
    <string name="close_plain_text">Close</string>
    <string name="add_city_to_favourites_plain_text">Add City to Favourites</string>
    <string name="use_current_location_plain_text">USE CURRENT LOCATION</string>
    <string name="cancel_plain_text">Cancel</string>
    <string name="settings_plain_text">Settings</string>
    <string name="loading_plain_text">Loading</string>
    <string name="search_here_plain_text">Search Here</string>
    <string name="icons_by_flaticon_plain_text">Icons by Flaticon</string>
    <string name="rate_this_app_plain_text">Rate This App</string>
    <string name="contact_us_plain_text">Contact Us</string>
    <string name="dark_plain_text">Dark</string>
    <string name="light_plain_text">Light</string>
    <string name="change_theme_plain_text">Change theme</string>
    <string name="highest_recovery_plain_text">Highest Recovery:</string>
    <string name="highest_deaths_plain_text">Highest Deaths:</string>
    <string name="highest_infections_plain_text">Highest Infections:</string>
    <string name="total_cases_plain_text">Total Cases</string>
</resources>