<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="androidx.lifecycle.LiveData" />

        <import type="com.octagon_technologies.covid19_statistics_app.Theme" />

        <import type="java.util.ArrayList" />

        <import type="com.octagon_technologies.covid19_statistics_app.network.reverse_geocoding_location.ReverseGeoCodingLocation" />

        <import type="com.octagon_technologies.covid19_statistics_app.SettingsDataStore"/>
        <variable
            name="settingsDataStore"
            type="SettingsDataStore"/>

        <variable
            name="reversedGeoCodingLocation"
            type="LiveData&lt;ReverseGeoCodingLocation&gt;" />


        <import type="com.octagon_technologies.covid19_statistics_app.IconType" />


        <variable
            name="isLoading"
            type="LiveData&lt;Boolean&gt;" />

        <variable
            name="theme"
            type="Theme" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@{theme == Theme.LIGHT ? @android:color/white : @color/dark_black}"
        tools:background="@color/dark_black"
        tools:context=".ui.find_location.FindLocationFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_grey_constraint_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@{theme == Theme.LIGHT ? @color/line_grey : @color/color_black}"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@color/color_black">

            <Button
                android:id="@+id/close_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/close_plain_text"
                android:textAllCaps="false"
                android:textColor="@{theme == Theme.DARK ? @android:color/white : @color/dark_black}"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:textColor="@android:color/white" />

            <TextView
                android:id="@+id/location_plain_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/locations_plain_text"
                android:textColor="@{theme == Theme.DARK ? @android:color/white : @color/dark_black}"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="@+id/close_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/close_btn"
                tools:textColor="@android:color/white" />

            <Button
                android:id="@+id/search_query"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/find_location_background"
                android:drawableStart="@drawable/ic_search_black"
                android:drawableLeft="@drawable/ic_search_black"
                android:drawablePadding="14dp"
                android:ems="10"
                android:gravity="start|center_vertical"
                android:padding="8dp"
                android:text="@string/find_location_plain_text"
                android:textAllCaps="false"
                android:textColor="@color/dark_black"
                android:textColorHint="@color/dark_black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/close_btn" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/gps_location_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:visibility="@{reversedGeoCodingLocation.reverseGeoCodingAddress != null ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_query"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/gps_cardinal_direction_image"
                    getImageIcon="@{theme}"
                    iconType="@{IconType.Navigation}"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:importantForAccessibility="no"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/ic_near_me_white" />

                <TextView
                    android:id="@+id/gps_current_plain_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:fontFamily="@font/coda"
                    android:text="@string/current_plain_text"
                    android:textColor="@{theme == Theme.LIGHT ? @android:color/black : @android:color/white}"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintBottom_toBottomOf="@+id/gps_cardinal_direction_image"
                    app:layout_constraintStart_toEndOf="@+id/gps_cardinal_direction_image"
                    app:layout_constraintTop_toTopOf="@+id/gps_cardinal_direction_image"
                    tools:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/gps_location_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/advent_pro_semibold"
                    android:text="@{reversedGeoCodingLocation.reverseGeoCodingAddress.country}"
                    android:textColor="@{theme == Theme.DARK ? @android:color/white : @color/dark_black}"
                    android:textSize="@dimen/_16ssp"
                    app:layout_constraintStart_toStartOf="@+id/gps_cardinal_direction_image"
                    app:layout_constraintTop_toBottomOf="@+id/gps_current_plain_text"
                    tools:text="Upper Hill"
                    tools:textColor="@android:color/white" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/enable_location_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/transparent"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="10dp"
                android:visibility="@{reversedGeoCodingLocation.reverseGeoCodingAddress == null ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_query"
                tools:visibility="gone">

                <ImageView
                    android:id="@+id/enable_location_image"
                    getImageIcon="@{theme}"
                    iconType="@{IconType.Navigation}"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_gravity="start|center_vertical"
                    android:importantForAccessibility="no" />

                <TextView
                    android:id="@+id/enable_location_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/roboto"
                    android:text="@{isLoading == true ? @string/loading_plain_text : @string/enable_location_services_plain_text}"
                    android:textColor="@{theme == Theme.DARK ? @android:color/white : @color/dark_black}"
                    tools:text="@string/enable_location_services_plain_text" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_grey_constraint_layout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/favourites_plain_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_14sdp"
                    android:layout_marginLeft="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/coda"
                    android:text="@string/favourites_plain_text"
                    android:textColor="@{theme == Theme.DARK ? @android:color/white : @color/dark_black}"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:textColor="@android:color/white" />

                <View
                    android:id="@+id/favourites_line"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/line_grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/favourites_plain_text" />

                <TextView
                    android:id="@+id/empty_favourite_list_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:gravity="center"
                    android:text="@string/you_haven_t_added_any_locations_yet_plain_text"
                    android:textColor="@{theme == Theme.DARK ? @android:color/white : @color/dark_black}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/favourites_line"
                    tools:textColor="@android:color/white" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/favourite_recycler_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/favourites_line" />

                <TextView
                    android:id="@+id/recent_plain_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_14sdp"
                    android:layout_marginLeft="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_70sdp"
                    android:fontFamily="@font/coda"
                    android:text="@string/recent_upper_plain_text"
                    android:textColor="@{theme == Theme.DARK ? @android:color/white : @color/dark_black}"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/favourite_recycler_view"
                    tools:textColor="@android:color/white" />

                <View
                    android:id="@+id/recent_line"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/line_grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recent_plain_text" />

                <TextView
                    android:id="@+id/empty_recent_list_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:gravity="center"
                    android:text="@string/it_looks_like_your_recent_history_is_empty_plain_text"
                    android:textColor="@{theme == Theme.DARK ? @android:color/white : @color/dark_black}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recent_line"
                    tools:textColor="@android:color/white" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recent_recycler_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recent_line" />

                <TextView
                    android:id="@+id/clear_favourites_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:padding="4dp"
                    android:text="@string/clear_all_plain_text"
                    android:textColor="@{theme == Theme.DARK ? @android:color/white : @color/dark_black}"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintBottom_toBottomOf="@+id/favourites_plain_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/favourites_plain_text"
                    tools:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/clear_recent_history_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:padding="4dp"
                    android:text="@string/clear_all_plain_text"
                    android:textColor="@{theme == Theme.DARK ? @android:color/white : @color/dark_black}"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintBottom_toBottomOf="@+id/recent_plain_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/recent_plain_text"
                    tools:textColor="@android:color/white" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>